# Django-Chat

./: .gitignore  pyproject.toml
core/: forms.py  urls.py  views.py
core/templates/core/: base.html  frontpage.html  login.html  signup.html
djangochat/: asgi.py  settings.py  urls.py
room/: consumer.py  models.py  routing.py  views.py
room/migrations/: 0001_initial.py  0002_message.py  0003_like.py
room/templates/room/: room.html  rooms.html
